<resources>
    <string name="app_name">wallet</string>
    <string name="text_selamat">Selamat Datang</string>
    <string name="text_daftar"><u>Daftar</u></string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Password</string>
    <string name="text_masuk">LOG IN</string>
    <string name="text_nama_panggilan">Nama Panggilan</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>
    <string name="text_tanggal">Tanggal Lahir</string>
    <string name="text_jenis">Jenis Kelamin</string>
    <string name="text_landingBawah">Belum Punya Akun?</string>
    <string name="text_editProfile">Edit Profile</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="recent"><b>Recent Transaction</b></string>
    <string name="tap">Tap the table for more details</string>
    <string name="tv_hello">Hello</string>
    <string name="tv_balance">Balance</string>
    <string name="tv_show_more">Show More >></string>
    <string name="tv_balance_nominal">Rp. 12.000.000</string>

    <string name="tv_catalog1">Transaction</string>
    <string name="tv_catalog2">Financial Reports</string>
    <string name="tv_catalog3">Savings Growth</string>
    <string name="tv_catalog4">Spending Chart</string>
    <string name="tv_catalog5">Investment OVR</string>
    <string name="tv_catalog6">Expense Trend</string>

    <string name="tv_income">Income</string>
    <string name="tv_expenditure">Expenditure</string>

    <string name="tv_news_app_catalog1">Growth &amp; Coins</string>
    <string name="tv_news_app_catalog2">Portfolio Diversity</string>
    <string name="tv_news_app_catalog3">Crypto Tech</string>
    <string name="tv_news_app_catalog4">Financial Goals</string>

    <string name="tv_date">Date</string>
    <string name="tv_category">Category</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_expense_title">Expense Title</string>
    <string name="tv_save">Save</string>
    <string name="tv_enter_message">Enter Message</string>

    <string-array name="category_items">
        <item>Select the category</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Medicine</item>
        <item>Groceries</item>
        <item>Rent</item>
        <item>Gift</item>
        <item>Savings</item>
        <item>Entertainment</item>
    </string-array>


    <string name="kategori">Categories</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_Income">Total Income</string>
    <string name="total_Expenses">Total Expenses</string>
    <string name="balance_income">Rp.7.783.000</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="medicine">Medicine</string>
    <string name="groceries">Groceries</string>
    <string name="rent">Rent</string>
    <string name="gifts">Gifts</string>
    <string name="savings">Savings</string>
    <string name="entertaiment">Entertaiment</string>
    <string name="Add_transaction">Add Transaction</string>

    <string name="tv_others">Other</string>
    <string name="tv_recent_transaction">Recent Transaction</string>
    <string name="tv_rent">Rent</string>
    <string name="tv_date_card_transaction">17:00 - October 24</string>

    <string name="tv_welcome">Akun Berhasil Ditambahkan</string>
    <string name="tv_landing_bawah">Sudah Punya Akun?</string>
    <string name="tv_landing_bawah2">Belum Punya Akun?</string>
    <string name="tv_masuk"><u>Masuk</u></string>
    <string name="tv_notification">Notification</string>
    <string name="tv_common">Common</string>
    <string name="tv_gennotif">General Notification</string>
    <string name="tv_sound">Sound</string>
    <string name="tv_vibrate">Vibrate</string>
    <string name="tv_daftar">Daftar</string>
    <string name="tv_type">Type</string>
    <string name="tv_add_transaction">Add Transaction</string>
    <string name="tv_male">Male</string>
    <string name="tv_female">Female</string>


    <string-array name="type_items">
        <item>Select the Type</item>
        <item>Income</item>
        <item>Expenses</item>
    </string-array>


</resources>