<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_email"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:layout_editor_absoluteY="325dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_password"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email_signup"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_nama_lengkap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_nama_lengkap"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password_signup" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_nama_panggilan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_nama_panggilan"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_nama_lengkap" />



    <RadioGroup
        android:id="@+id/edt_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/edt_nama_panggilan"
        tools:layout_editor_absoluteY="470dp">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_male" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_female" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttolandingpage"
        android:textColor="@color/secondary"
        android:text="@string/tv_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>