<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_email"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:layout_editor_absoluteY="325dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_password"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email_signup" />



    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttolandingpage"
        android:textColor="@color/secondary"
        android:text="@string/tv_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_landingBawah" />

    <TextView
        android:id="@+id/tv_landingBawah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_landing_bawah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/tv_masuk"
        app:layout_constraintStart_toEndOf="@id/tv_landingBawah"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:lineSpacingExtra="8dp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        />



</androidx.constraintlayout.widget.ConstraintLayout>