<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:textSize="30sp"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_selamat"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_daftar" />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@drawable/buttolandingpage"
        android:textColor="@color/secondary"
        android:text="@string/tv_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintBottom_toTopOf="@id/tv_landingBawah"/>

    <TextView
        android:id="@+id/tv_landingBawah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_landing_bawah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/tv_masuk"
        app:layout_constraintStart_toEndOf="@id/tv_landingBawah"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:lineSpacingExtra="8dp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
