<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addExpense"
    android:id="@+id/main"
    android:layout_marginTop="20dp"
    android:background="@color/third">

    <RelativeLayout
        android:id="@+id/containeratas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="Back Arrow" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_add_transaction"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:padding="50dp"
        app:layout_constraintTop_toBottomOf="@id/containeratas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/containernavbar">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="date"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_type"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/TypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:entries="@array/type_items"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_category"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:entries="@array/category_items"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_amount"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Amount"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_expense_title"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/expenseTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Expense Title"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginBottom="16dp" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary"
            android:padding="12dp"
            android:text="@string/tv_save"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:id="@id/containernavbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/navbar" />

        <include
            layout="@layout/navbar"
            android:id="@+id/navbar"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
