<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity_sub_categories">


    <RelativeLayout
        android:id="@+id/containeratas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/kategori"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_icon"
            />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/containeratas"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintBottom_toTopOf="@id/clcategories"
        app:layout_constraintEnd_toEndOf="@id/main"
        >

        <ImageView
            android:id="@+id/iv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_total_balance"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_balance"
            app:layout_constraintTop_toTopOf="@id/tv_total_balance"
            android:src="@drawable/income"
            android:layout_marginStart="45dp"
            />

        <TextView
            android:id="@+id/tv_total_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            app:layout_constraintStart_toEndOf="@id/iv_income"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_income"
            app:layout_constraintStart_toStartOf="@id/iv_income"
            app:layout_constraintTop_toBottomOf="@id/tv_total_balance"
            android:textStyle="bold"
            android:textSize="25sp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            />


        <ImageView
            android:id="@+id/iv_expense"
            android:layout_width="12dp"
            android:layout_height="12dp"

            app:layout_constraintStart_toEndOf="@id/tv_total_balance"
            app:layout_constraintTop_toTopOf="@id/tv_total_balance"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_balance"
            app:layout_constraintEnd_toEndOf="@id/tv_total_expense"
            android:src="@drawable/expense"

            />

        <TextView
            android:id="@+id/tv_total_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            app:layout_constraintStart_toEndOf="@id/iv_expense"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/tv_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_income"
            app:layout_constraintStart_toStartOf="@id/iv_expense"
            app:layout_constraintTop_toBottomOf="@id/tv_total_expense"
            android:textStyle="bold"
            android:textSize="25sp"
            android:shadowColor="#000000"
            android:textColor="@color/red"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clcategories"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/containernavbar"
        android:background="@drawable/rounded_top"
        android:padding="20dp"
        android:orientation="vertical"
        android:columnCount="3"
        android:rowCount="1">

        <TextView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tvbulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="April"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recyclecategory"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclecategory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvbulan"

            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="24dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Add Expenses"
        android:paddingHorizontal="20dp"
        android:background="@drawable/border_corner_categories"
        android:textColor="@color/secondary"
        android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/containernavbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/navbar" />

        <include
            layout="@layout/navbar"
            android:id="@+id/navbar"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>